Fix sidebar ads not showing

--- a/less/forum.less
+++ b/less/forum.less
@@ -8,9 +8,15 @@
   .App {
     overflow-x: visible;
   }
+}
 
+.davwheat-ad-sidebar {
+  display: none;
+}
+
+@media @desktop-up {
   .davwheat-ad-sidebar {
-    display: none;
+    display: block;
   }
 }
 
